# adobe-1a

./: .dockerignore  .gitignore  Dockerfile  EVALUATION.md  README.md  README_new.md  debug_all_cases.py  debug_comparison.py  debug_extractor_title.py  debug_file01_full_text.py  debug_file01_title.py  debug_file02_specific.py  debug_file03.py  debug_file03_compare.py  debug_file03_content.py  debug_file03_extraction.py  debug_file03_headings.py  debug_file03_hierarchy.py  debug_file04.py  debug_file04_compare.py  debug_file04_grouping.py  debug_file04_positions.py  debug_file04_spans.py  debug_file05.py  debug_file05_compare.py  debug_grouping.py  debug_invitation_filter.py  debug_page9.py  debug_rfp_patterns.py  debug_title.py  detailed_comparison.py  docker-compose.yml  docker_health_check.sh  final_comparison.py  find_missing.py  main.py  process_pdfs.py  pyproject.toml  quick_compare.py  requirements.txt  (+11 more)
examples/: colab_notebook.ipynb
output/: file02.json  file03.json  file05.json
src/pdf_outline_extractor/: __init__.py  cli.py  cli_clean.py  cli_hackathon.py  cli_new.py  cli_simple.py  extractor.py  extractor_new.py  i18n_utils.py  i18n_utils_new.py  json_writer.py  json_writer_new.py  layout_utils.py  layout_utils_new.py
src/pdf_outline_extractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_outputs/: file01.json  file02.json  file03.json  file05.json
tests/: test_comprehensive.py  test_comprehensive_new.py  test_extractor.py  test_i18n.py
tests/expected/: sample.json
tests/fixtures/: __init__.py  sample.json
