[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf_outline_extractor"
version = "1.0.0"
description = "A pure-Python library for extracting structured outlines from PDF documents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Adobe Hackathon Team", email = "team@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
keywords = ["pdf", "outline", "extraction", "document", "structure", "headings"]
requires-python = ">=3.8"
dependencies = [
    "PyMuPDF>=1.23.14",
    "langdetect>=1.0.9",
    "numpy>=1.24.3",
    "regex>=2023.6.3",
    "click>=8.1.7",
    "unicodedata2>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/youruser/pdf_outline_extractor"
Documentation = "https://github.com/youruser/pdf_outline_extractor#readme"
Repository = "https://github.com/youruser/pdf_outline_extractor.git"
"Bug Tracker" = "https://github.com/youruser/pdf_outline_extractor/issues"

[project.scripts]
pdf_outline_extractor = "pdf_outline_extractor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pdf_outline_extractor" = ["*.json", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=pdf_outline_extractor --cov-report=term-missing"
